--- a/Complete Code/stock/src/main/resources/templates/painel-vendedor.html
+++ b/Complete Code/stock/src/main/resources/templates/painel-vendedor.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="https://www.thymeleaf.org" lang="en"></html>
 <html lang="en">
 <head>
 
@@ -19,16 +20,16 @@
     <h2 class="h2-lg"> Painel Vendedor </h2>
     <div class="form-center">
       <div class="input-container mt-4">
-        <button onclick="document.location='login.html'"> Sair Conta </button>
+        <button onclick="document.location='login'"> Sair Conta </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='gerenciar-produtos.html'"> Gerenciar Produtos </button>
+        <button onclick="document.location='gerenciar-produtos'"> Gerenciar Produtos </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='historico-vendas-site.html'"> Ver Histórico de Vendas do Site </button>
+        <button onclick="document.location='historico-vendas-site'"> Ver Histórico de Vendas do Site </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='cadastro-vendedor.html'"> Cadastrar Novo Vendedor </button>
+        <button onclick="document.location='cadastro-vendedor'"> Cadastrar Novo Vendedor </button>
       </div>   
     </div>
   </div>
