--- a/Complete Code/stock/src/main/resources/templates/cadastro-vendedor.html
+++ b/Complete Code/stock/src/main/resources/templates/cadastro-vendedor.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="https://www.thymeleaf.org" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro Vendedor</title>
+    <title>Cadastro Cliente</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="" th:href="@{bootstrap.min.css}" >
     <!-- Link css -->
-    <link rel="stylesheet" href="./css/cadastro.css">
+    <link rel="stylesheet" href="" th:href="@{cadastro.css}" >
     <!-- Link js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
     <!--Link icons-->
@@ -23,13 +23,13 @@
 
     <main>
       <!-- Início do formulário -->
-      <form method="post" action="autentica-cadastro.html" class="container-fluid mt-5 mb-5 flex-container">
+      <form method="post" action="/cadastrar-vendedor" class="container-fluid mt-5 mb-5 flex-container">
         <h2 class="text-center"> Cadastro Vendedor </h2>
         <section class="mt-4">
           <!-- Username -->
           <div class="mt-3 flex-container">
             <i class="fa regular fa-user-plus icon" style="flex-grow: 1"></i>
-            <input type="text" id="user" name="user"  placeholder="Usuário" class="input" style="flex-grow: 9" required>
+            <input type="text" id="user" name="username"  placeholder="Usuário" class="input" style="flex-grow: 9" required>
           </div>
           <!-- Nome -->
           <div class="mt-3 flex-container">
@@ -66,7 +66,7 @@
           <!-- Senha -->
           <div class="mt-3 flex-container">
             <i class="fas fa-lock icon" style="flex-grow: 1"></i>
-            <input type="password" id="senha" name="senha" placeholder="Senha"
+            <input type="password" id="senha" name="password" placeholder="Senha"
              class="input" style="flex-grow: 9" required>
           </div>
         </section>
