--- a/Complete Code/stock/src/main/resources/templates/carrinho-compras.html
+++ b/Complete Code/stock/src/main/resources/templates/carrinho-compras.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="https://www.thymeleaf.org" lang="en"></html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -25,7 +26,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" onclick="document.location='painel-cliente.html'">Conta Cliente</a>
+            <a class="navbar-brand" href="#" onclick="document.location='painel-cliente'">Conta Cliente</a>
           </div>
             
           <!-- COLLAPSIBLE NAVBAR -->
@@ -36,9 +37,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Produtos<span class="caret"></span></a>
                 <ul class="dropdown-menu" aria-labelledby="about-us">
-                  <li><a href="#" onclick="document.location='listagem-produtos.html'">Ver Produtos </a></li>
-                  <li><a href="#" onclick="document.location='carrinho-compras.html'">Ver Carrinho de Compras</a></li>
-                  <li><a href="#" onclick="document.location='pedidos.html'">Ver Pedidos</a></li>
+                  <li><a href="#" onclick="document.location='listagem-produtos'">Ver Produtos </a></li>
+                  <li><a href="#" onclick="document.location='carrinho-compras'">Ver Carrinho de Compras</a></li>
+                  <li><a href="#" onclick="document.location='pedidos'">Ver Pedidos</a></li>
                 </ul>
               </li>
               <li><a href="#" class="sair" type="submit" onclick="document.location='login.html'">Sair</a></li>
@@ -51,12 +52,12 @@
             <div class="table-title">
                 <div class="row">
                     <div class="col-sm-6">
-						<h2>Carrinho <b>Compras</b></h2>
+						  <h2>Carrinho <b>Compras</b></h2>
 					</div>
 					<div class="col-sm-6">
-						<a href="painel-cliente.html" class="btn btn-success" data-toggle="submit"><i class="material-icons">shopping_cart_checkout</i> <span>Efetuar Pedido</span></a>
+						<a href="painel-cliente" method="post" th:action="/efetuar-pedido" class="btn btn-success" data-toggle="submit"><i class="material-icons">shopping_cart_checkout</i> <span>Efetuar Pedido</span></a>
 					</div>
-                </div>
+          </div>
             </div>
             <table class="table table-striped table-hover">
                 <thead>
@@ -64,47 +65,46 @@
                         <th>ID</th>
                         <th>Nome</th>
                         <th>Descrição</th>
-						<th>Preço</th>
-                        <th>Estoque</th>
+						            <th>Preço</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
                 <tbody>
+                  <div th:each="produto: ${produtos}" >
                     <tr>
-                        <td>1</td>
-                        <td>Heineken</td>
-                        <td>Cerveja puro malte 300ml</td>
-						<td>6.00</td>
-                        <td>10</td>
+                        <td th:text="${produto.id}" />
+                        <td th:text="${produto.nome}" />
+                        <td th:text="${produto.descricao}" />
+                        <td th:text="${produto.preco}" />
                         <td>
-                            <a href="#removeCartModal" class="removeCart" data-toggle="modal"><i class="material-icons" title="Remover do carrinho">remove_shopping_cart</i></a>
-
+                            <a th:href="@{#removeCartModal{id}(id=${produto.id})}" class="removeCart" data-toggle="modal"><i class="material-icons" title="Remover do carrinho">remove_shopping_cart</i></a>
                         </td>
                     </tr>
+                    <!-- Modal adicionado ao carrinho -->
+                    <div th:id="'removeCartModal'+${produto.id}" class="modal fade">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+                          <form method="post" th:action="@{/remove-carrinho/{id}(id=${produto.id})}" >
+                            <div class="modal-header">						
+                              <h4 class="modal-title">Remover Produto do Carrinho</h4>
+                              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            </div>
+                            <div class="modal-body">					
+                              <p>Você tem certeza que deseja remover esse produto do seu carrinho de compras?</p>
+                              <p class="text-warning"><small>Você pode adicionar ele ao seu carrinho novamente voltando a página de produtos.</small></p>
+                            </div>
+                            <div class="modal-footer">
+                              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
+                              <input type="submit" class="btn btn-danger" value="Remover">
+                            </div>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </tbody>
             </table>
         </div>
     </div>
-    <!-- Modal adicionado ao carrinho -->
-	<div id="removeCartModal" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form>
-					<div class="modal-header">						
-						<h4 class="modal-title">Remover Produto do Carrinho</h4>
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					</div>
-					<div class="modal-body">					
-						<p>Você tem certeza que deseja remover esse produto do seu carrinho de compras?</p>
-						<p class="text-warning"><small>Você pode adicionar ele ao seu carrinho novamente voltando a página de produtos.</small></p>
-					</div>
-					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
-						<input type="submit" class="btn btn-danger" value="Remover">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
 </body>
 </html>
