--- a/Complete Code/stock/src/main/resources/templates/painel-cliente.html
+++ b/Complete Code/stock/src/main/resources/templates/painel-cliente.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="https://www.thymeleaf.org" lang="en"></html>
 <html lang="en">
 <head>
 
@@ -19,16 +20,16 @@
     <h2 class="h2-lg"> Painel Cliente </h2>
     <div class="form-center">
       <div class="input-container mt-4">
-        <button onclick="document.location='login.html'"> Sair Conta </button>
+        <button onclick="document.location='login'"> Sair Conta </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='listagem-produtos.html'"> Ver Produtos </button>
+        <button onclick="document.location='listagem-produtos'"> Ver Produtos </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='carrinho-compras.html'"> Ver Carrinho de Compras </button>
+        <button onclick="document.location='carrinho-compras'"> Ver Carrinho de Compras </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='pedidos.html'"> Ver Pedidos </button>
+        <button onclick="document.location='pedidos'"> Ver Pedidos </button>
       </div>   
     </div>
   </div>
